TheOutlaws/base.core/src/main/java/eapli/base/languagemanagement/domain/task/AutomaticTaskLanguageParser.java
package eapli.base.languagemanagement.domain.task;// Generated from AutomaticTaskLanguage.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class AutomaticTaskLanguageParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, Decision=19, Email=20, Word=21, Number=22, POW=23, MUL=24, DIV=25, 
		ADD=26, SUB=27, XML=28, WS=29;
	public static final int
		RULE_prog = 0, RULE_file = 1, RULE_calculation = 2, RULE_arithmetic = 3, 
		RULE_email = 4, RULE_filetext = 5, RULE_emailtext = 6, RULE_textinfo = 7, 
		RULE_text = 8, RULE_filexml = 9, RULE_fileName = 10, RULE_formResponse = 11, 
		RULE_fileSearch = 12, RULE_calculationSearch = 13, RULE_request = 14, 
		RULE_approval = 15;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "file", "calculation", "arithmetic", "email", "filetext", "emailtext", 
			"textinfo", "text", "filexml", "fileName", "formResponse", "fileSearch", 
			"calculationSearch", "request", "approval"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'search'", "'file'", "':'", "';'", "'calculation'", "'('", "')'", 
			"'send'", "'email'", "'|'", "'='", "'{'", "'File'", "'}'", "'Calculation'", 
			"'Form'", "'Request'", "'Approval'", "'{Decision}'", null, null, null, 
			"'^'", "'*'", "'/'", "'+'", "'-'", "'.xml'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, "Decision", "Email", "Word", 
			"Number", "POW", "MUL", "DIV", "ADD", "SUB", "XML", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "AutomaticTaskLanguage.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AutomaticTaskLanguageParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public EmailContext email() {
			return getRuleContext(EmailContext.class,0);
		}
		public FileContext file() {
			return getRuleContext(FileContext.class,0);
		}
		public CalculationContext calculation() {
			return getRuleContext(CalculationContext.class,0);
		}
		public ProgContext prog() {
			return getRuleContext(ProgContext.class,0);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AutomaticTaskLanguageListener ) ((AutomaticTaskLanguageListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AutomaticTaskLanguageListener ) ((AutomaticTaskLanguageListener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AutomaticTaskLanguageVisitor) return ((AutomaticTaskLanguageVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		return prog(0);
	}

	private ProgContext prog(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ProgContext _localctx = new ProgContext(_ctx, _parentState);
		ProgContext _prevctx = _localctx;
		int _startState = 0;
		enterRecursionRule(_localctx, 0, RULE_prog, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(36);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__7:
				{
				setState(33);
				email();
				}
				break;
			case T__0:
				{
				setState(34);
				file();
				}
				break;
			case T__4:
				{
				setState(35);
				calculation();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(46);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!= ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(44);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
					case 1:
						{
						_localctx = new ProgContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_prog);
						setState(38);
						if (!(precpred(_ctx, 6))) throw new FailedPredicateException(this, "precpred(_ctx, 6)");
						setState(39);
						email();
						}
						break;
					case 2:
						{
						_localctx = new ProgContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_prog);
						setState(40);
						if (!(precpred(_ctx, 5))) throw new FailedPredicateException(this, "precpred(_ctx, 5)");
						setState(41);
						file();
						}
						break;
					case 3:
						{
						_localctx = new ProgContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_prog);
						setState(42);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(43);
						calculation();
						}
						break;
					}
					} 
				}
				setState(48);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class FileContext extends ParserRuleContext {
		public FileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file; }
	 
		public FileContext() { }
		public void copyFrom(FileContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class SearchfileContext extends FileContext {
		public FilexmlContext filexml() {
			return getRuleContext(FilexmlContext.class,0);
		}
		public List<FiletextContext> filetext() {
			return getRuleContexts(FiletextContext.class);
		}
		public FiletextContext filetext(int i) {
			return getRuleContext(FiletextContext.class,i);
		}
		public SearchfileContext(FileContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AutomaticTaskLanguageListener ) ((AutomaticTaskLanguageListener)listener).enterSearchfile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AutomaticTaskLanguageListener ) ((AutomaticTaskLanguageListener)listener).exitSearchfile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AutomaticTaskLanguageVisitor) return ((AutomaticTaskLanguageVisitor<? extends T>)visitor).visitSearchfile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FileContext file() throws RecognitionException {
		FileContext _localctx = new FileContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_file);
		try {
			_localctx = new SearchfileContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(49);
			match(T__0);
			setState(50);
			match(T__1);
			setState(51);
			filexml(0);
			setState(52);
			match(T__2);
			setState(53);
			filetext(0);
			setState(54);
			match(T__2);
			setState(55);
			filetext(0);
			setState(56);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CalculationContext extends ParserRuleContext {
		public CalculationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_calculation; }
	 
		public CalculationContext() { }
		public void copyFrom(CalculationContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class CalculationArithmeticContext extends CalculationContext {
		public ArithmeticContext arithmetic() {
			return getRuleContext(ArithmeticContext.class,0);
		}
		public CalculationArithmeticContext(CalculationContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AutomaticTaskLanguageListener ) ((AutomaticTaskLanguageListener)listener).enterCalculationArithmetic(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AutomaticTaskLanguageListener ) ((AutomaticTaskLanguageListener)listener).exitCalculationArithmetic(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AutomaticTaskLanguageVisitor) return ((AutomaticTaskLanguageVisitor<? extends T>)visitor).visitCalculationArithmetic(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CalculationContext calculation() throws RecognitionException {
		CalculationContext _localctx = new CalculationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_calculation);
		try {
			_localctx = new CalculationArithmeticContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			match(T__4);
			setState(59);
			match(T__2);
			setState(60);
			arithmetic(0);
			setState(61);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArithmeticContext extends ParserRuleContext {
		public ArithmeticContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arithmetic; }
	 
		public ArithmeticContext() { }
		public void copyFrom(ArithmeticContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class NumberContext extends ArithmeticContext {
		public TerminalNode Number() { return getToken(AutomaticTaskLanguageParser.Number, 0); }
		public NumberContext(ArithmeticContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AutomaticTaskLanguageListener ) ((AutomaticTaskLanguageListener)listener).enterNumber(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AutomaticTaskLanguageListener ) ((AutomaticTaskLanguageListener)listener).exitNumber(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AutomaticTaskLanguageVisitor) return ((AutomaticTaskLanguageVisitor<? extends T>)visitor).visitNumber(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ParenthesesContext extends ArithmeticContext {
		public ArithmeticContext inner;
		public ArithmeticContext arithmetic() {
			return getRuleContext(ArithmeticContext.class,0);
		}
		public ParenthesesContext(ArithmeticContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AutomaticTaskLanguageListener ) ((AutomaticTaskLanguageListener)listener).enterParentheses(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AutomaticTaskLanguageListener ) ((AutomaticTaskLanguageListener)listener).exitParentheses(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AutomaticTaskLanguageVisitor) return ((AutomaticTaskLanguageVisitor<? extends T>)visitor).visitParentheses(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class TextinfoArithmeticContext extends ArithmeticContext {
		public TextinfoContext textinfo() {
			return getRuleContext(TextinfoContext.class,0);
		}
		public TextinfoArithmeticContext(ArithmeticContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AutomaticTaskLanguageListener ) ((AutomaticTaskLanguageListener)listener).enterTextinfoArithmetic(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AutomaticTaskLanguageListener ) ((AutomaticTaskLanguageListener)listener).exitTextinfoArithmetic(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AutomaticTaskLanguageVisitor) return ((AutomaticTaskLanguageVisitor<? extends T>)visitor).visitTextinfoArithmetic(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class MultiplicationOrDivisionContext extends ArithmeticContext {
		public ArithmeticContext left;
		public Token operator;
		public ArithmeticContext right;
		public List<ArithmeticContext> arithmetic() {
			return getRuleContexts(ArithmeticContext.class);
		}
		public ArithmeticContext arithmetic(int i) {
			return getRuleContext(ArithmeticContext.class,i);
		}
		public TerminalNode MUL() { return getToken(AutomaticTaskLanguageParser.MUL, 0); }
		public TerminalNode DIV() { return getToken(AutomaticTaskLanguageParser.DIV, 0); }
		public MultiplicationOrDivisionContext(ArithmeticContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AutomaticTaskLanguageListener ) ((AutomaticTaskLanguageListener)listener).enterMultiplicationOrDivision(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AutomaticTaskLanguageListener ) ((AutomaticTaskLanguageListener)listener).exitMultiplicationOrDivision(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AutomaticTaskLanguageVisitor) return ((AutomaticTaskLanguageVisitor<? extends T>)visitor).visitMultiplicationOrDivision(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AdditionOrSubtractionContext extends ArithmeticContext {
		public ArithmeticContext left;
		public Token operator;
		public ArithmeticContext right;
		public List<ArithmeticContext> arithmetic() {
			return getRuleContexts(ArithmeticContext.class);
		}
		public ArithmeticContext arithmetic(int i) {
			return getRuleContext(ArithmeticContext.class,i);
		}
		public TerminalNode ADD() { return getToken(AutomaticTaskLanguageParser.ADD, 0); }
		public TerminalNode SUB() { return getToken(AutomaticTaskLanguageParser.SUB, 0); }
		public AdditionOrSubtractionContext(ArithmeticContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AutomaticTaskLanguageListener ) ((AutomaticTaskLanguageListener)listener).enterAdditionOrSubtraction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AutomaticTaskLanguageListener ) ((AutomaticTaskLanguageListener)listener).exitAdditionOrSubtraction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AutomaticTaskLanguageVisitor) return ((AutomaticTaskLanguageVisitor<? extends T>)visitor).visitAdditionOrSubtraction(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class PowerContext extends ArithmeticContext {
		public ArithmeticContext left;
		public Token operator;
		public ArithmeticContext right;
		public List<ArithmeticContext> arithmetic() {
			return getRuleContexts(ArithmeticContext.class);
		}
		public ArithmeticContext arithmetic(int i) {
			return getRuleContext(ArithmeticContext.class,i);
		}
		public TerminalNode POW() { return getToken(AutomaticTaskLanguageParser.POW, 0); }
		public PowerContext(ArithmeticContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AutomaticTaskLanguageListener ) ((AutomaticTaskLanguageListener)listener).enterPower(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AutomaticTaskLanguageListener ) ((AutomaticTaskLanguageListener)listener).exitPower(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AutomaticTaskLanguageVisitor) return ((AutomaticTaskLanguageVisitor<? extends T>)visitor).visitPower(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArithmeticContext arithmetic() throws RecognitionException {
		return arithmetic(0);
	}

	private ArithmeticContext arithmetic(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ArithmeticContext _localctx = new ArithmeticContext(_ctx, _parentState);
		ArithmeticContext _prevctx = _localctx;
		int _startState = 6;
		enterRecursionRule(_localctx, 6, RULE_arithmetic, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				_localctx = new TextinfoArithmeticContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				setState(64);
				textinfo();
				}
				break;
			case 2:
				{
				_localctx = new NumberContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(65);
				match(Number);
				}
				break;
			case 3:
				{
				_localctx = new ParenthesesContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(66);
				match(T__5);
				setState(67);
				((ParenthesesContext)_localctx).inner = arithmetic(0);
				setState(68);
				match(T__6);
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(83);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!= ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(81);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
					case 1:
						{
						_localctx = new PowerContext(new ArithmeticContext(_parentctx, _parentState));
						((PowerContext)_localctx).left = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_arithmetic);
						setState(72);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(73);
						((PowerContext)_localctx).operator = match(POW);
						setState(74);
						((PowerContext)_localctx).right = arithmetic(4);
						}
						break;
					case 2:
						{
						_localctx = new MultiplicationOrDivisionContext(new ArithmeticContext(_parentctx, _parentState));
						((MultiplicationOrDivisionContext)_localctx).left = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_arithmetic);
						setState(75);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(76);
						((MultiplicationOrDivisionContext)_localctx).operator = _input.LT(1);
						_la = _input.LA(1);
						if ( !(_la==MUL || _la==DIV) ) {
							((MultiplicationOrDivisionContext)_localctx).operator = (Token)_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(77);
						((MultiplicationOrDivisionContext)_localctx).right = arithmetic(3);
						}
						break;
					case 3:
						{
						_localctx = new AdditionOrSubtractionContext(new ArithmeticContext(_parentctx, _parentState));
						((AdditionOrSubtractionContext)_localctx).left = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_arithmetic);
						setState(78);
						if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
						setState(79);
						((AdditionOrSubtractionContext)_localctx).operator = _input.LT(1);
						_la = _input.LA(1);
						if ( !(_la==ADD || _la==SUB) ) {
							((AdditionOrSubtractionContext)_localctx).operator = (Token)_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(80);
						((AdditionOrSubtractionContext)_localctx).right = arithmetic(2);
						}
						break;
					}
					} 
				}
				setState(85);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class EmailContext extends ParserRuleContext {
		public EmailContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_email; }
	 
		public EmailContext() { }
		public void copyFrom(EmailContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class SendEmailContext extends EmailContext {
		public TextContext text() {
			return getRuleContext(TextContext.class,0);
		}
		public EmailtextContext emailtext() {
			return getRuleContext(EmailtextContext.class,0);
		}
		public SendEmailContext(EmailContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AutomaticTaskLanguageListener ) ((AutomaticTaskLanguageListener)listener).enterSendEmail(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AutomaticTaskLanguageListener ) ((AutomaticTaskLanguageListener)listener).exitSendEmail(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AutomaticTaskLanguageVisitor) return ((AutomaticTaskLanguageVisitor<? extends T>)visitor).visitSendEmail(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EmailContext email() throws RecognitionException {
		EmailContext _localctx = new EmailContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_email);
		try {
			_localctx = new SendEmailContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			match(T__7);
			setState(87);
			match(T__8);
			setState(88);
			match(T__9);
			setState(89);
			text(0);
			setState(90);
			match(T__9);
			setState(91);
			emailtext(0);
			setState(92);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FiletextContext extends ParserRuleContext {
		public FiletextContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_filetext; }
	 
		public FiletextContext() { }
		public void copyFrom(FiletextContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class FiletextTextContext extends FiletextContext {
		public TextContext text() {
			return getRuleContext(TextContext.class,0);
		}
		public FiletextTextContext(FiletextContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AutomaticTaskLanguageListener ) ((AutomaticTaskLanguageListener)listener).enterFiletextText(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AutomaticTaskLanguageListener ) ((AutomaticTaskLanguageListener)listener).exitFiletextText(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AutomaticTaskLanguageVisitor) return ((AutomaticTaskLanguageVisitor<? extends T>)visitor).visitFiletextText(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class FiletextDivContext extends FiletextContext {
		public FiletextContext filetext() {
			return getRuleContext(FiletextContext.class,0);
		}
		public TerminalNode DIV() { return getToken(AutomaticTaskLanguageParser.DIV, 0); }
		public FiletextDivContext(FiletextContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AutomaticTaskLanguageListener ) ((AutomaticTaskLanguageListener)listener).enterFiletextDiv(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AutomaticTaskLanguageListener ) ((AutomaticTaskLanguageListener)listener).exitFiletextDiv(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AutomaticTaskLanguageVisitor) return ((AutomaticTaskLanguageVisitor<? extends T>)visitor).visitFiletextDiv(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class FiletextFileTextTextContext extends FiletextContext {
		public FiletextContext filetext() {
			return getRuleContext(FiletextContext.class,0);
		}
		public TextContext text() {
			return getRuleContext(TextContext.class,0);
		}
		public FiletextFileTextTextContext(FiletextContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AutomaticTaskLanguageListener ) ((AutomaticTaskLanguageListener)listener).enterFiletextFileTextText(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AutomaticTaskLanguageListener ) ((AutomaticTaskLanguageListener)listener).exitFiletextFileTextText(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AutomaticTaskLanguageVisitor) return ((AutomaticTaskLanguageVisitor<? extends T>)visitor).visitFiletextFileTextText(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class FiletextFormValidationContext extends FiletextContext {
		public FiletextContext filetext() {
			return getRuleContext(FiletextContext.class,0);
		}
		public TerminalNode DIV() { return getToken(AutomaticTaskLanguageParser.DIV, 0); }
		public List<TextinfoContext> textinfo() {
			return getRuleContexts(TextinfoContext.class);
		}
		public TextinfoContext textinfo(int i) {
			return getRuleContext(TextinfoContext.class,i);
		}
		public FiletextFormValidationContext(FiletextContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AutomaticTaskLanguageListener ) ((AutomaticTaskLanguageListener)listener).enterFiletextFormValidation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AutomaticTaskLanguageListener ) ((AutomaticTaskLanguageListener)listener).exitFiletextFormValidation(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AutomaticTaskLanguageVisitor) return ((AutomaticTaskLanguageVisitor<? extends T>)visitor).visitFiletextFormValidation(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FiletextContext filetext() throws RecognitionException {
		return filetext(0);
	}

	private FiletextContext filetext(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		FiletextContext _localctx = new FiletextContext(_ctx, _parentState);
		FiletextContext _prevctx = _localctx;
		int _startState = 10;
		enterRecursionRule(_localctx, 10, RULE_filetext, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			_localctx = new FiletextTextContext(_localctx);
			_ctx = _localctx;
			_prevctx = _localctx;
